--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,12 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.give-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: yellow;
 }
 
 @keyframes App-logo-spin {
