--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .App-logo {
@@ -28,18 +30,25 @@
   color: #61dafb;
 }
 
-.give-container {
-  height: 100vh;
-  width: 100vw;
-  background-color: yellow;
-}
 .Index {
   background-color: aqua;
-  border: 2px solid black;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 .Show {
-  background-color: blueviolet;
-  border: 2px solid black;
+  background-color: purple;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 @keyframes App-logo-spin {
