--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,13 +1,11 @@
-//  body {
-//   width: 100%;
-//   height: 100%;
-// }
+@import "~bootstrap/scss/bootstrap";
 /// The Give Theme Colors
 $pink: #E7717D;
 $grey: #C2CAD0;
 $taupe: #C2B9B0;
 $brown: #7E685A;
 $green: #AFD275;
+$white: #fffafa;
 /// Theme Fonts
 @import url('https://fonts.googleapis.com/css2?family=New+Tegomin&family=Train+One&display=swap');
 $a-tags: 'a, a:active, a:hover, a:visited';
@@ -28,12 +26,12 @@ body {
 	align-items: center;
 	width: 100%;
 	min-height: 10vh;
-	background: $brown;
-	color: white;
+	background: $white;
+	color: $brown;
 	h3{
 		font-family: 'Train One';
-		color: white;
-		font-size: 30px;
+		color: $brown;
+		font-size: 50px;
 		}
 	}
 .nav-List {
@@ -42,10 +40,12 @@ body {
 	justify-content: space-around;
 	align-items: center;
 	list-style: none;
-
+	li {
+		color: $brown;
+	}
 }
 .App {
-	background-color: $green;
+	background-color: $white;
 	text-align: center;
 	height: 100vh;
 	width: 100vw;
@@ -55,7 +55,7 @@ body {
 }
 
 .App-header {
-  background-color: $green;
+  background-color: $white;
   height: 20vh;
   display: flex;
   flex-direction: column;
@@ -71,33 +71,47 @@ body {
 }
 /// Index Component Styling
 .Index {
-  background-color: $green;
+  background-color: $white;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $brown;
 }
 .card {
 	display: flex;
-    background-color: white;
+    background-color: $pink;
     border-radius: 15px;
 	flex-direction: row;
 	flex-wrap: wrap;
     justify-content: center;
     padding-top: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-    color: $pink;  
+    color: $white;  
 }
 .Show {
-  background-color: $pink;
+  background-color: $white;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $brown;
+}
+.About-page {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 50%;
+	.about-bold{
+		font-weight: bolder;
+		font-style: italic;
+	}
+	h2{
+		color: $brown;
+	}
 }
 
 .form-style-2{
