--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -74,7 +74,7 @@ $a-tags-hover: 'a:active, a:hover';
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	width: 100vw;
+	// width: 100vw;
 	
 }
 .CardGroup {
