--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -83,7 +83,7 @@ $a-tags-hover: 'a:active, a:hover';
 .card {
 	display: flex;
 	flex-direction: row;
-	
+	min-height: 200px;
 }
 
 .Show-card img {
